Move searches to frontend to save query qouta
